# phil

./: flake.nix  phil.cabal
app/: Main.hs  Phil.hs  Repl.hs
app/Phil/: Commands.hs  Database.hs  Server.hs  Settings.hs
app/Phil/Commands/: GlobalSettings.hs  Prefix.hs
app/Phil/Database/: GlobalSettings.hs  GuildSettings.hs  Orphans.hs
app/Phil/Database/GuildSettings/: Cache.hs  GuildCache.hs
app/Phil/Events/: Reminders.hs
app/Phil/Settings/Global/: Eff.hs
app/Phil/Settings/Guild/: Eff.hs  Prefix.hs
app/Polysemy/Random/: IO.hs
src/Phil/: Database.hs  Events.hs  Language.hs  Server.hs  Settings.hs
src/Phil/Commands/: Prefix.hs  Reminders.hs  Util.hs
src/Phil/Database/: Eff.hs  GlobalSettings.hs  GuildSettings.hs  Sqlite.hs
src/Phil/Database/GuildSettings/: Cache.hs
src/Phil/Events/: MessageCreate.hs
src/Phil/Language/: Inference.hs  Interpreter.hs  Lexer.x  Parser.y  Repl.hs  Syntax.hs
src/Phil/Language/Inference/: Names.hs
src/Phil/Settings/Guild/: Eff.hs
