cabal-version: 2.4
name:          phil
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021
category:      Web

executable phil
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:
    Phil.Commands
    Phil.Commands.Reminders
    Phil.Commands.GlobalSettings
    Phil.Commands.Prefix
    Phil.Commands.Util
    Phil.Database
    Phil.Database.Eff
    Phil.Database.GlobalSettings
    Phil.Database.GuildSettings
    Phil.Database.GuildSettings.Cache
    Phil.Database.GuildSettings.GuildCache
    Phil.Database.Orphans
    Phil.Database.Sqlite
    Phil.Events
    Phil.Events.MessageCreate
    Phil.Events.Reminders
    Phil.Server
    Phil.Settings
    Phil.Settings.Global.Eff
    Phil.Settings.Guild.Eff
    Phil.Settings.Guild.Prefix
    Polysemy.Random.IO

  ghc-options:
    -Wall -Werror=incomplete-patterns -Wno-missed-extra-shared-lib
    -fmax-relevant-binds=0 -fno-show-valid-hole-fits -threaded
    -fplugin=Polysemy.Plugin

  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base
    , calamity
    , calamity-commands
    , containers
    , data-default
    , data-flags
    , di
    , di-polysemy
    , esqueleto
    , generic-lens
    , lens
    , monad-logger
    , persistent
    , persistent-sqlite
    , polysemy
    , polysemy-plugin
    , polysemy-zoo
    , random
    , servant
    , servant-polysemy
    , servant-server
    , text
    , unboxing-vector
