cabal-version: 3.0
name:          phil
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021
category:      Web

common base
  default-language:   Haskell2010
  ghc-options:
    -Wall -Werror=incomplete-patterns -Wno-missed-extra-shared-lib
    -fmax-relevant-binds=0 -fno-show-valid-hole-fits

  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base
    , text

executable phil
  import:         base
  hs-source-dirs: app
  main-is:        Phil.hs
  ghc-options:    -threaded -fplugin=Polysemy.Plugin
  build-depends:
    , calamity
    , data-default
    , data-flags
    , di
    , di-polysemy
    , generic-lens
    , lens
    , persistent
    , phil
    , polysemy
    , polysemy-plugin
    , servant-polysemy

library
  import:          base
  hs-source-dirs:  src
  ghc-options:     -fplugin=Polysemy.Plugin
  exposed-modules:
    Phil.Commands
    Phil.Commands.GlobalSettings
    Phil.Commands.Prefix
    Phil.Commands.Reminders
    Phil.Commands.Util
    Phil.Database
    Phil.Database.Eff
    Phil.Database.GlobalSettings
    Phil.Database.GuildSettings
    Phil.Database.GuildSettings.Cache
    Phil.Database.GuildSettings.GuildCache
    Phil.Database.Orphans
    Phil.Database.Sqlite
    Phil.Events
    Phil.Events.MessageCreate
    Phil.Events.Reminders
    Phil.Server
    Phil.Settings
    Phil.Settings.Global.Eff
    Phil.Settings.Guild.Eff
    Phil.Settings.Guild.Prefix

  build-depends:
    , calamity
    , calamity-commands
    , containers
    , data-default
    , data-flags
    , esqueleto
    , generic-lens
    , lens
    , monad-logger
    , persistent
    , persistent-sqlite
    , polysemy
    , polysemy-plugin
    , polysemy-zoo
    , servant
    , servant-server
    , unboxing-vector

library phil-plus-plus
  import:          base
  visibility:      public
  hs-source-dirs:  src
  exposed-modules:
    Phil.Language
    Phil.Language.Inference
    Phil.Language.Inference.Names
  ghc-options:     -fplugin=Polysemy.Plugin
  build-tool-depends:
    , alex:alex
    , happy:happy

  build-depends:
    , array
    , containers
    , lens
    , polysemy
    , polysemy-plugin
    , prettyprinter

library polysemy-random-io
  import:          base
  hs-source-dirs:  src
  exposed-modules: Polysemy.Random.IO
  ghc-options:     -fplugin=Polysemy.Plugin
  build-depends:
    , polysemy
    , polysemy-plugin
    , polysemy-zoo
    , random
